// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConventionExplainer /> is togglable 1`] = `
.c0 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: inline-block;
  position: relative;
  width: 24px;
  height: 12px;
}

.c2::after,
.c2::before {
  display: block;
  position: absolute;
  top: 50%;
  width: 10px;
  height: 2px;
  background-color: currentColor;
  content: "";
}

.c2::before {
  left: 4px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

[aria-expanded="true"] .c2::before,
[aria-selected="true"] .c2::before {
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c2::after {
  right: 4px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

[aria-expanded="true"] .c2::after,
[aria-selected="true"] .c2::after {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c2::before,
.c2::after {
  -webkit-transition: -webkit-transform 0.25s ease,-webkit-transform 0.25s ease;
  -webkit-transition: transform 0.25s ease,-webkit-transform 0.25s ease;
  transition: transform 0.25s ease,-webkit-transform 0.25s ease;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (max-width:600px) {
  .c0 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c0 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    <a
      aria-expanded="false"
      class="c1"
      href="#"
    >
      Plus d'informations sur les conventions collectives
      <div
        class="c2"
        role="presentation"
      />
    </a>
  </div>
</div>
`;

exports[`<ConventionExplainer /> should render 1`] = `
.c0 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: inline-block;
  position: relative;
  width: 24px;
  height: 12px;
}

.c2::after,
.c2::before {
  display: block;
  position: absolute;
  top: 50%;
  width: 10px;
  height: 2px;
  background-color: currentColor;
  content: "";
}

.c2::before {
  left: 4px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

[aria-expanded="true"] .c2::before,
[aria-selected="true"] .c2::before {
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c2::after {
  right: 4px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

[aria-expanded="true"] .c2::after,
[aria-selected="true"] .c2::after {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c2::before,
.c2::after {
  -webkit-transition: -webkit-transform 0.25s ease,-webkit-transform 0.25s ease;
  -webkit-transition: transform 0.25s ease,-webkit-transform 0.25s ease;
  transition: transform 0.25s ease,-webkit-transform 0.25s ease;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media (max-width:600px) {
  .c0 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c0 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    <a
      aria-expanded="true"
      class="c1"
      href="#"
    >
      Explications sur les conventions collectives nationales
      <div
        class="c2"
        role="presentation"
      />
    </a>
    <p
      class="c3"
    >
      Qu'est ce qu'une convention collective ?
    </p>
    <p>
      Une convention collective est un accord négocié entre des organisations syndicales de salariés et des organisations d'employeurs.
      <br />
      Elle permet d'aménager les règles issues du code du travail concernant les conditions d'emploi, la formation professionnelle, le travail des salariés et les garanties sociales aux spécificités des secteurs d'activité et géographiques concernés. Elle peut également prévoir d'autres mesures qui ne sont pas prévues par le code du travail.
    </p>
    <p
      class="c3"
    >
      Une convention collective de branche s'applique-t-elle à ma situation ?
    </p>
    <p>
      Pour pouvoir s'appliquer à vous, la convention collective de branche doit être applicable à votre entreprise.
      <br />
      L’employeur a l’obligation d’appliquer la convention collective lorsque l’entreprise entre dans le champ d’application professionnel et géographie défini par la convention et que :
    </p>
    <ul>
      <li>
        La convention collective de branche a été étendue par le ministère du travail
      </li>
      <li>
        L’entreprise est adhérente à une organisation patronale signataire de la convention collective
      </li>
    </ul>
  </div>
</div>
`;
